// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > postReleaseReviewResponse > audit > expected call 1`] = `
{
  "createdAt": 2023-08-13T00:00:00.000Z,
  "kind": "release",
  "modelId": "abc",
  "role": "msro",
  "semver": "3.0.2",
  "updatedAt": 2023-08-14T00:00:00.000Z,
}
`;

exports[`routes > review > postReleaseReviewResponse > missing review decision 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "'request_changes' | 'approve' | 'undo'",
          "message": "Required",
          "path": [
            "body",
            "decision",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Path: body.decision - Message: Required",
    "name": "Bailo Error",
  },
}
`;

exports[`routes > review > postReleaseReviewResponse > successfully respond to a review 1`] = `
{
  "review": {
    "createdAt": "2023-08-13T00:00:00.000Z",
    "kind": "release",
    "modelId": "abc",
    "role": "msro",
    "semver": "3.0.2",
    "updatedAt": "2023-08-14T00:00:00.000Z",
  },
}
`;

exports[`routes > review > postReleaseReviewResponse > successfully respond to a review without a comment 1`] = `
{
  "review": {
    "createdAt": "2023-08-13T00:00:00.000Z",
    "kind": "release",
    "modelId": "abc",
    "role": "msro",
    "semver": "3.0.2",
    "updatedAt": "2023-08-14T00:00:00.000Z",
  },
}
`;
